fixes footer link visibility

--- a/themes/nav-community-v1/static/css/style.css
+++ b/themes/nav-community-v1/static/css/style.css
@@ -1579,7 +1579,7 @@ textarea:-moz-placeholder {
     border-right: none;
 }
 .footer-menu li a {
-    color: #FFFFFF;
+    color: #7a7a7a;
     font-weight: 400;
     padding: 0 11px;
 }
